--- a/Footer.htm
+++ b/Footer.htm
@@ -27,19 +27,29 @@
     <footer class="phia-footer">
         <div class="container">
             <!-- Newsletter Section -->
-            <div class="newsletter-section">
-                <div class="section-divider">
+            <div class="newsletter-section row align-items-center mb-4">
+                <div class="section-divider col-12">
                     <img src="spectrum-divider.avif" alt="Divider" class="divider-icon">
                 </div>
-                <h2 class="newsletter-title">JOIN THE PHIA ENERGY WAVE</h2>
-                <form class="newsletter-form">
-                    <div class="newsletter-form-row">
-                        <input type="text" class="newsletter-input" placeholder="First Name">
-                        <input type="text" class="newsletter-input" placeholder="Last Name">
-                        <input type="email" class="newsletter-input" placeholder="Email">
-                        <button type="submit" class="newsletter-btn">JOIN NOW</button>
-                    </div>
-                </form>
+                <div class="col-lg-8 col-md-12 mx-auto">
+                    <h2 class="newsletter-title text-center">JOIN THE PHIA ENERGY WAVE</h2>
+                    <form class="newsletter-form">
+                        <div class="row newsletter-form-row g-3 justify-content-center">
+                            <div class="col-md-3 col-9">
+                                <input type="text" class="newsletter-input form-control" placeholder="First Name">
+                            </div>
+                            <div class="col-md-3 col-9">
+                                <input type="text" class="newsletter-input form-control" placeholder="Last Name">
+                            </div>
+                            <div class="col-md-3 col-lg-3 col-xl-4  col-9">
+                                <input type="email" class="newsletter-input form-control" placeholder="Email">
+                            </div>
+                            <div class="col-xl-2 col-sm-4 col-md-3  col-4 d-grid">
+                                <button type="submit" class="newsletter-btn btn btn-join">JOIN NOW</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <!-- Main Footer Links Section -->
@@ -73,7 +83,7 @@
                         <div class="footer-widget">
                             <h3 class="widget-title">COMPANY</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Company</a></li>
+                                <li><a href="">Company</a></li>
                                 <li><a href="#">Philosophy</a></li>
                                 <li><a href="#">Ingredients</a></li>
                                 <li><a href="#">Research</a></li>
@@ -105,12 +115,13 @@
                         <div class="footer-widget">
                             <h3 class="widget-title">CONTACT PHIA</h3>
                             <ul class="footer-contact">
-                                <li><a href="tel:720-853-8955"
-                                        class="footer-phone-link">
+                                <li><a href="tel:720-853-8955" class="footer-phone-link">
                                         <i class="fas fa-phone-alt"></i> 720-853-8955</a></li>
-                                <li> <a href="/contact-us" class="footer-email-link"> <i class="fas fa-envelope"></i>Email Phia</a> </li>
+                                <li> <a href="/contact-us" class="footer-email-link"> <i
+                                            class="fas fa-envelope"></i>Email Phia</a> </li>
                                 <li><a href="https://www.google.com/maps/place/2185+Broadway,+Denver,+CO+80205,+USA/@39.7525934,-104.9885082,16.5z/data=!4m6!3m5!1s0x876c78d8c507c0e1:0x2f8a7deae31d9306!8m2!3d39.7524892!4d-104.9876327!16s%2Fg%2F11nns6g6zj?entry=ttu&g_ep=EgoyMDI1MDgyNS4wIKXMDSoASAFQAw%3D%3D"
-                                        class="footer-address-link" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> 720 Ogden Street
+                                        class="footer-address-link" target="_blank" rel="noopener"><i
+                                            class="fas fa-map-marker-alt"></i> 720 Ogden Street
                                         Denver, CO 80218</a></li>
                             </ul>
                             <div class="social-icons">
